--- a/management/argocd-eks-app.yaml
+++ b/management/argocd-eks-app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: eks-cluster
 spec:
   destination:
-    name: 'in-cluster'
+    name: ''
     namespace: 'default'
     server: 'https://kubernetes.default.svc'
   source:
